refactor(core): express the domain in Java 25 idioms
Streams where a loop was describing how rather than what, and exhaustive switch
where a ternary was silently assuming a two-valued enum.

Transaction:

- netOf splits the single-currency check out first, so the reduction becomes a
  plain fold with nothing conditional in it. Each posting maps to its signed
  contribution through a switch over Direction, then Money::add reduces them.
  Worth noting why this is correct rather than merely shorter: reduce requires
  an associative accumulator, and Money.add is associative over a single
  currency — which is exactly what requireSingleCurrency has just guaranteed.
- requireSingleCurrency uses findFirst().ifPresent(...) to name the first two
  currencies that differ, rather than a loop with a flag.
- reverse and split build their postings with map and Stream.concat.
- total filters to debits and reduces.
- currency() uses getFirst() rather than get(0): SequencedCollection says what
  is meant.

Direction.opposite and AccountKind.increasedBy become switch expressions. This
is not cosmetic. Both were ternaries, which silently treat any new enum constant
as the else branch; an exhaustive switch over an enum needs no default and stops
compiling if a constant is added. The compiler now enforces what the ternary
merely assumed.

Posting.effectOn compares against increasedBy() directly instead of routing
through the +1/-1 of effectOf, which reads as what it means.

Deliberately not changed: Money.toString stays imperative. It is string index
arithmetic and a stream would obscure it.

Deliberately not added: functional interfaces as parameters. Nothing in this
domain takes behaviour — no strategy, no callback, no lazy supplier — and
adding a Function parameter to look functional would be forcing a concept in.
Method references in reduce are the functional usage that is actually earned.

No behaviour change: the same 135 tests pass untouched.